quick fix on AA contrast issue with #777 text color. struggling w/ nav fix

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -50,7 +50,7 @@ $font-sizes: (
   6: $h6-font-size
 );
 
-$medium-gray: #777777;
+$medium-gray: #757575;
 
 // Bootstrap Variable Override Below
 
